# zeph

./: .gitignore  CLAUDE.md  COMMANDS.md  Cargo.toml  LICENSE  PLAN.md  README.md  TESTS.md
src/: cli.rs  lib.rs  main.rs
src/commands/: help.rs  info.rs  mod.rs  summary.rs
src/repl/: autocomplete.rs  history.rs  input.rs  mod.rs  picker.rs
src/ui/: mod.rs  spinner.rs  style.rs  welcome.rs
src/zarr/: coord_cache.rs  metadata.rs  mod.rs  store.rs
tests/: cloud.rs  fixtures.rs
tests/fixtures/wb2_era5/: .zmetadata
