[package]
name = "zeph"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for inspecting zarr data stores"

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object_store = { version = "0.13", features = ["aws", "gcp", "azure", "http"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
zarrs = { version = "0.23", features = ["async"] }
zarrs_object_store = "0.6"
zarrs_storage = "0.4"

[dev-dependencies]
tempfile = "3"
